--- a/package.json
+++ b/package.json
@@ -37,19 +37,19 @@
   "homepage": "https://github.com/1000ch/atom-csscomb#readme",
   "_id": "atom-csscomb@1.9.4",
   "_shasum": "b2ce8fd52d1d8174beb2865db59f4d61e7fcf6b4",
-  "_resolved": "file:..\\d-116125-5076-hvnxv3\\package.tgz",
-  "_from": "..\\d-116125-5076-hvnxv3\\package.tgz",
+  "_resolved": "file:..\\d-11611-6644-nvhs86\\package.tgz",
+  "_from": "..\\d-11611-6644-nvhs86\\package.tgz",
   "_atomModuleCache": {
     "version": 1,
     "dependencies": [
       {
         "name": "atom-linter",
-        "version": "4.5.1",
-        "path": "node_modules\\atom-linter\\lib\\index.js"
+        "version": "4.3.4",
+        "path": "node_modules\\atom-linter\\lib\\helpers.js"
       },
       {
         "name": "consistent-path",
-        "version": "1.1.1",
+        "version": "1.0.3",
         "path": "node_modules\\atom-linter\\node_modules\\consistent-path\\lib\\index.js"
       },
       {
@@ -59,7 +59,7 @@
       },
       {
         "name": "strip-ansi",
-        "version": "3.0.1",
+        "version": "3.0.0",
         "path": "node_modules\\atom-linter\\node_modules\\consistent-path\\node_modules\\shell-path\\node_modules\\strip-ansi\\index.js"
       },
       {
@@ -71,11 +71,6 @@
         "name": "named-js-regexp",
         "version": "1.3.1",
         "path": "node_modules\\atom-linter\\node_modules\\named-js-regexp\\lib\\named-js-regexp.js"
-      },
-      {
-        "name": "sb-promisify",
-        "version": "1.1.1",
-        "path": "node_modules\\atom-linter\\node_modules\\sb-promisify\\lib\\index.js"
       },
       {
         "name": "tmp",
@@ -179,7 +174,7 @@
       },
       {
         "name": "postcss-scss",
-        "version": "0.1.5",
+        "version": "0.1.3",
         "path": "node_modules\\perfectionist\\node_modules\\postcss-scss\\lib\\scss-syntax.js"
       },
       {
@@ -204,7 +199,7 @@
       },
       {
         "name": "postcss",
-        "version": "5.0.16",
+        "version": "5.0.14",
         "path": "node_modules\\postcss\\lib\\postcss.js"
       },
       {
@@ -229,7 +224,7 @@
       },
       {
         "name": "postcss-safe-parser",
-        "version": "1.0.6",
+        "version": "1.0.4",
         "path": "node_modules\\postcss-safe-parser\\lib\\safe-parse.js"
       }
     ],
@@ -237,14 +232,12 @@
       ".js": [
         "index.js",
         "node_modules\\atom-linter\\lib\\helpers.js",
-        "node_modules\\atom-linter\\lib\\index.js",
-        "node_modules\\atom-linter\\lib\\types.js",
         "node_modules\\atom-linter\\node_modules\\consistent-path\\lib\\index.js",
         "node_modules\\atom-linter\\node_modules\\consistent-path\\node_modules\\shell-path\\index.js",
         "node_modules\\atom-linter\\node_modules\\consistent-path\\node_modules\\shell-path\\node_modules\\strip-ansi\\index.js",
         "node_modules\\atom-linter\\node_modules\\consistent-path\\node_modules\\shell-path\\node_modules\\strip-ansi\\node_modules\\ansi-regex\\index.js",
+        "node_modules\\atom-linter\\node_modules\\consistent-path\\src\\index.js",
         "node_modules\\atom-linter\\node_modules\\named-js-regexp\\lib\\named-js-regexp.js",
-        "node_modules\\atom-linter\\node_modules\\sb-promisify\\lib\\index.js",
         "node_modules\\atom-linter\\node_modules\\tmp\\Gruntfile.js",
         "node_modules\\atom-linter\\node_modules\\tmp\\lib\\tmp.js",
         "node_modules\\atom-linter\\node_modules\\tmp\\node_modules\\os-tmpdir\\index.js",
@@ -402,7 +395,6 @@
         "node_modules\\atom-linter\\node_modules\\consistent-path\\node_modules\\shell-path\\package.json",
         "node_modules\\atom-linter\\node_modules\\consistent-path\\package.json",
         "node_modules\\atom-linter\\node_modules\\named-js-regexp\\package.json",
-        "node_modules\\atom-linter\\node_modules\\sb-promisify\\package.json",
         "node_modules\\atom-linter\\node_modules\\tmp\\node_modules\\os-tmpdir\\package.json",
         "node_modules\\atom-linter\\node_modules\\tmp\\package.json",
         "node_modules\\atom-linter\\package.json",
@@ -464,15 +456,14 @@
         ],
         "dependencies": {
           "consistent-path": "^1.0.3",
-          "named-js-regexp": "^1.3.1",
-          "sb-promisify": "^1.0.0",
-          "tmp": "~0.0.28"
+          "named-js-regexp": "^1.3.1"
         }
       },
       {
         "paths": [
           "node_modules\\atom-linter\\node_modules\\consistent-path\\lib",
-          "node_modules\\atom-linter\\node_modules\\consistent-path"
+          "node_modules\\atom-linter\\node_modules\\consistent-path",
+          "node_modules\\atom-linter\\node_modules\\consistent-path\\src"
         ],
         "dependencies": {
           "shell-path": "^1.0.4"
@@ -599,7 +590,7 @@
           "node_modules\\perfectionist\\node_modules\\postcss-scss"
         ],
         "dependencies": {
-          "postcss": "^5.0.16"
+          "postcss": "^5.0.10"
         }
       },
       {
@@ -635,7 +626,7 @@
           "node_modules\\postcss-safe-parser"
         ],
         "dependencies": {
-          "postcss": "^5.0.16"
+          "postcss": "^5.0.13"
         }
       }
     ]
